Pretty basic API client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Charles Saracco <crsaracco@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+ratelimit = "0.4.4"
+reqwest = "0.9.10"
+serde_json = "1.0.38"
